--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "openai": "^4.85.1"
-  }
+    "openai": "^4.85.1",
+    "zod": "^3.24.2"
+  },
+  "type": "module"
 }
