--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "node-persist": "^4.0.4",
+    "node-schedule": "^2.1.1",
     "openai": "^4.86.1",
     "zod": "^3.24.2"
   }
