--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-persist": "^4.0.4",
     "node-schedule": "^2.1.1",
     "openai": "^4.86.1",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
