--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/server": "^4.11.3",
     "asdfjkl": "^0.0.7",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "graphql": "^16.10.0",
     "node-persist": "^4.0.4",
     "node-schedule": "^2.1.1",
     "openai": "^4.86.1",
@@ -26,7 +28,9 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/node": "^22.13.13",
     "browser-sync": "^3.0.3",
-    "cypress": "^14.2.0"
+    "cypress": "^14.2.0",
+    "typescript": "^5.8.2"
   }
 }
